# eyrc-24-25-logistic-cobot

./: .gitignore  README.md
ebot_description/: package.xml
ebot_description/launch/: ebot_gazebo_launch.py  start_world_launch.py  start_world_task1b_launch.py  start_world_task1c_launch.py
ebot_nav2/: package.xml
ebot_nav2/config/: ekf.yaml  mapper_params_online_async.yaml
ebot_nav2/launch/: ebot_bringup_launch.py  ebot_nav_cmd.py
ebot_nav2/maps/: map.pgm  map.yaml
ebot_nav2/params/: nav2_params.yaml
ebot_nav2/rviz/: nav2_default_view.rviz
eyantra_warehouse/: package.xml
eyantra_warehouse/config/: SkyX_Moon.fragment
eyantra_warehouse/launch/: task0.launch.py  task1b.launch.py  task1c.launch.py
my_auv_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_auv_sim/launch/: my_auv_gazebo_launch.py  pool_simulation.launch.py
my_auv_sim/models/: auv.sdf  model.material
my_auv_sim/worlds/: pool.sdf
pymoveit2/examples/assets/: box1.stl  rack_box.stl  rack_box_again.stl
tf_broadcaster_pkg/: package.xml  setup.cfg  setup.py
tf_broadcaster_pkg/tf_broadcaster_pkg/: fixed_frame_broadcaster.py  frame_listener.py
ur5_control/: package.xml  setup.py
ur5_control/scripts/: task1b.py
ur5_control/ur5_control/: aruco_detector.py
ur_description/launch/: start_ur_world_launch.py  ur5_gazebo_launch.py
