<?xml version="1.0"?>
<package format="3">
  <name>my_auv_sim</name>
  <version>0.0.0</version>
  <description>AUV simulation environment for underwater vehicle control</description>
  <maintainer email="parthkhannawork@gmail.com">parthkhanna</maintainer>
  <license>MIT</license>

  <!-- Dependencies for C++ packages -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

